@@ -39,40 +39,32 @@
   (define default-font (if use-xft "Sans" "fixed"))
 
   (define (make-font-item changed-callback)
-    (let* ((box (gtk-hbox-new nil box-spacing))
+    (let* ((value default-font)
+	   (box (gtk-vbox-new nil box-spacing))
 	   (entry (gtk-entry-new))
-	   (button (gtk-button-new-with-label (_ "Browse..."))))
+	   (button (gtk-font-button-new)))
+
       (gtk-editable-set-editable entry nil)
-      (gtk-box-pack-start box entry t t)
+      (gtk-font-button-set-use-font button t)
+
       (gtk-box-pack-start box button)
+      (gtk-box-pack-start box entry)
+
       (when changed-callback
 	(g-signal-connect
 	 entry "changed" (make-signal-callback changed-callback)))
-      (g-signal-connect
-       button "clicked"
-       (lambda ()
-	 (let ((fontsel (gtk-font-selection-dialog-new (_ "Select font"))))
-	   (gtk-font-selection-dialog-set-font-name
-	    fontsel (gtk-entry-get-text entry))
-	   (g-signal-connect
-	    (gtk-font-selection-dialog-ok-button fontsel) "clicked"
-	    (lambda ()
-	      (gtk-entry-set-text
-	       entry (gtk-font-selection-dialog-get-font-name fontsel))
-	      (gtk-widget-destroy fontsel)))
-	   (g-signal-connect
-	    (gtk-font-selection-dialog-cancel-button fontsel) "clicked"
-	    (lambda () (gtk-widget-destroy fontsel)))
-	   (g-signal-connect fontsel "delete_event"
-                             (lambda () (gtk-widget-destroy fontsel)))
-	   (gtk-widget-show fontsel)
-	   (gtk-grab-add fontsel))))
+
+      (g-signal-connect button "font-set"
+			(lambda () (gtk-entry-set-text entry (gtk-font-button-get-font-name button))))
+
       (gtk-widget-show box)
+
       (lambda (op)
 	(case op
 	  ((set) (lambda (x)
 		   (cond ((stringp x)
-			  (gtk-entry-set-text entry x))
+			  (gtk-entry-set-text entry x)
+			  (gtk-font-button-set-font-name button x))
 			 ((consp x)
 			  (let ((face (cond
                                        ((string-equal (car x) "Xft")
@@ -83,10 +75,14 @@
                                         (pango-description->face (cdr x))))))
 			    (when face
 			      (gtk-entry-set-text
-			       entry (face->pango-description face)))))
-			 (t (gtk-entry-set-text entry default-font)))))
+			       entry (face->pango-description face))
+			      (gtk-font-button-set-font-name
+			       button (face->pango-description face)))))
+			 (t (gtk-entry-set-text entry default-font)
+			    (gtk-font-button-set-font-name button default-font)))))
 	  ((clear) (lambda ()
-		     (gtk-entry-set-text entry default-font)))
+		     (gtk-entry-set-text entry default-font)
+		     (gtk-font-button-set-font-name button default-font)))
 	  ((ref) (lambda ()
 		   (let* ((pango-name (gtk-entry-get-text entry))
 			  (face (pango-description->face pango-name)))
